--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
